# elasticsearch-k8s-connection

./: README.md  WORKSPACE  dev.env  docker-compose.yml  package.json  tsconfig.json
search/: BUILD.bazel  index.ts  ingress.yaml  search.yaml
